--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>Next Lar</title>
 <meta charset="utf-8">
 <!-- Favicon usando a imagem nextlar.jpg -->
-<link rel="icon" href="nextlar.jpg" type="image/jpeg" sizes="any">
-<link rel="apple-touch-icon" href="nextlar.jpg">
-<link rel="shortcut icon" href="nextlar.jpg">
+<link rel="icon" href="nextlar.png" type="image/png" sizes="any">
+<link rel="apple-touch-icon" href="nextlar.png">
+<link rel="shortcut icon" href="nextlar.png">
 <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
 <style> @-ms-viewport { width: device-width; } </style>
 <link rel="stylesheet" href="vendor/reset.min.css">
@@ -80,7 +80,7 @@
 <!-- Logo -->
 <a href="https://www.instagram.com/nextlar.construtora" target="_blank">
   <div id="logoContainer">
-    <img id="companyLogo" src="nextlar.jpg" alt="Next Lar - Instagram" title="Visite nosso Instagram">
+    <img id="companyLogo" src="nextlar.png" alt="Next Lar - Instagram" title="Visite nosso Instagram">
   </div>
 </a>
 
