--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 1000;
+  width: 55px !important;  /* Container também com tamanho fixo */
+  height: 55px !important;
 }
 
 #companyLogo {
@@ -31,6 +33,8 @@
   cursor: pointer;
   transition: transform 0.2s ease, opacity 0.2s ease;
   opacity: 0.6;
+  margin: 0 !important;        /* Remove margens extras */
+  padding: 0 !important;
 }
 
 #companyLogo:hover {
