--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Next Lar</title>
 <meta charset="utf-8">
+<!-- Favicon usando a imagem nextlar.jpg -->
 <link rel="icon" href="nextlar.jpg" type="image/jpeg" sizes="any">
 <link rel="apple-touch-icon" href="nextlar.jpg">
 <link rel="shortcut icon" href="nextlar.jpg">
@@ -11,99 +12,75 @@
 <link rel="stylesheet" href="vendor/reset.min.css">
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-
 <style>
-/* LOGO SIMPLIFICADA - SEM ESPECIFICIDADE EXCESSIVA */
+/* Logo */
 #logoContainer {
   position: fixed;
-  z-index: 100;
+  top: 42px;
   left: 50%;
   transform: translateX(-50%);
-  width: 55px;
-  height: 55px;
-  line-height: 0;
+  z-index: 1000;
 }
 
-/* IMAGEM DA LOGO */
 #companyLogo {
-  width: 100% !important;
-  height: 100% !important;
-  border-radius: 50% !important;
-  object-fit: cover !important;
-  display: block !important;
-  opacity: 0.7;
-  transition: all 0.2s ease;
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  object-fit: cover;
+  display: block;
+  cursor: pointer;
+  transition: transform 0.2s ease, opacity 0.2s ease;
+  opacity: 0.6;
 }
 
 #companyLogo:hover {
-  opacity: 1;
   transform: scale(1.1);
+  opacity: 1;
 }
 
-/* DESKTOP */
-@media (min-width: 769px) {
-  #logoContainer { top: 25px; }
-}
-
-/* TABLET */
-@media (max-width: 768px) and (min-width: 481px) {
-  #logoContainer { 
-    top: 10px; 
-    width: 48px; 
-    height: 48px; 
-  }
-}
-
-/* SMARTPHONE */
-@media (max-width: 480px) {
-  #logoContainer { 
-    top: 5px; 
-    width: 42px; 
-    height: 42px; 
-  }
-}
-
-/* BARRA SUPERIOR ABAIXO DA LOGO */
+/* Barra superior */
 #titleBar {
-  top: 90px !important;
-  position: relative !important;
   background: rgba(0,0,0,0.15) !important;
   backdrop-filter: blur(20px) !important;
-  border: 1px solid rgba(255,255,255,0.1) !important;
+  border: 1px solid rgba(255,255,255,0.1);
   font-family: 'Poppins', sans-serif !important;
   font-weight: 600 !important;
-  z-index: 50 !important;
 }
 
-/* DEMAIS ESTILOS */
+/* Fonte MODERNA em toda interface */
 .sceneName, .scenes .text {
-  font-family: 'Poppins', sans-serif !important;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif !important;
   font-weight: 500 !important;
   letter-spacing: 0.5px !important;
 }
 
 #sceneList {
   background: rgba(0,0,0,0.25) !important;
-  backdrop-filter: blur(12px) !important;
+  backdrop-filter: blur(12px);
   font-family: 'Poppins', sans-serif !important;
 }
 
-#sceneList ul { background: transparent !important; }
+#sceneList ul {
+  background: transparent !important;
+}
+
 #sceneList .scenes li {
   background: rgba(0,0,0,0.4) !important;
   font-family: 'Poppins', sans-serif !important;
   transition: all 0.2s ease !important;
 }
-#sceneList .scenes li:hover { background: rgba(255,255,255,0.2) !important; }
-</style>
 
+#sceneList .scenes li:hover {
+  background: rgba(255,255,255,0.2) !important;
+}
+</style>
 </head>
 <body class="multiple-scenes">
 
 <!-- Logo -->
 <a href="https://www.instagram.com/nextlar.construtora" target="_blank">
   <div id="logoContainer">
-    <img id="companyLogo" src="nextlar.jpg" alt="Next Lar - Instagram">
+    <img id="companyLogo" src="nextlar.jpg" alt="Next Lar - Instagram" title="Visite nosso Instagram">
   </div>
 </a>
 
@@ -131,7 +108,6 @@
   <h1 class="sceneName"></h1>
 </div>
 
-<!-- BOTÕES -->
 <a href="javascript:void(0)" id="autorotateToggle">
   <img class="icon off" src="img/play.png"><img class="icon on" src="img/pause.png">
 </a>
@@ -141,6 +117,7 @@
 <a href="javascript:void(0)" id="sceneListToggle">
   <img class="icon off" src="img/expand.png"><img class="icon on" src="img/collapse.png">
 </a>
+
 <a href="javascript:void(0)" id="viewUp" class="viewControlButton viewControlButton-1">
   <img class="icon" src="img/up.png">
 </a>
